--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10   col-md-offset-2 main">
          <h1 class="page-header">管理控制台</h1>
          <p>
-         <button type="button" class="btn btn-default">操作1</button>
-         <button type="button" class="btn btn-primary">操作2</button>
-         <button type="button" class="btn btn-success">操作3</button>
-         <button type="button" class="btn btn-info">操作4</button>
-         <button type="button" class="btn btn-warning">操作5</button>
-         <button type="button" class="btn btn-danger">操作6</button>
+         <button type="button" class="btn-1g btn-default">操作1</button>
+         <button type="button" class="btn-1g btn-primary">操作2</button>
+         <button type="button" class="btn-1g btn-success">操作3</button>
+         <button type="button" class="btn-1g btn-info">操作4</button>
+         <button type="button" class="btn-1g btn-warning">操作5</button>
+         <button type="button" class="btn-1g btn-danger">操作6</button>
          </p>
        <div class="row">
         <div class="col-md-6 col-sm-12 ">
